- Fix repair bugs - Minor html/js bugs from new template - Other minor issues

--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -350,6 +350,7 @@
 <script>
     // Tab Navigation Handler
     document.addEventListener('DOMContentLoaded', function() {
+        window.configManager = new ConfigManager();
 
         const tabButtons = document.querySelectorAll('.tab-button');
         const tabContents = document.querySelectorAll('.tab-content');
