--- a/pkg/web/templates/index.html
+++ b/pkg/web/templates/index.html
@@ -134,4 +134,10 @@
         <i class="bi bi-trash"></i>Delete Torrent
     </a></li>
 </ul>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        window.dashboard = new TorrentDashboard();
+    });
+</script>
 {{ end }}
