--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -196,7 +196,7 @@
                                     <label class="label" for="qbit.refresh_interval">
                                         <span class="label-text font-medium">Refresh Interval (seconds)</span>
                                     </label>
-                                    <input type="number" class="input input-bordered" name="qbit.refresh_interval" id="qbit.refresh_interval" min="1" max="3600">
+                                    <input type="number" class="input input-bordered" name="qbit.refresh_interval" id="qbit.refresh_interval" min="1">
                                 </div>
 
                                 <div class="form-control">
@@ -273,7 +273,7 @@
                                         <label class="label" for="repair.workers">
                                             <span class="label-text font-medium">Worker Threads</span>
                                         </label>
-                                        <input type="number" class="input input-bordered" name="repair.workers" id="repair.workers" min="1" max="20">
+                                        <input type="number" class="input input-bordered" name="repair.workers" id="repair.workers" min="1" placeholder="40">
                                         <div class="label">
                                             <span class="label-text-alt">Number of concurrent repair workers</span>
                                         </div>
